# music-studio

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs/: GUIDE_CLAUDE_CODE.md  PROMPTS_PHASE_0.md  SPEC_PHASE_0_ARCHITECTURE.md  SPEC_PHASE_1_DECOUVERTE.md  SPEC_PHASE_2_PETIT_PRODUCTEUR.md  SPEC_PHASE_3_MELODISTE.md  SPEC_PHASE_4_STUDIO.md  SPEC_PHASE_5_PRODUCTEUR_PRO.md
docs/prompts/: PROMPTS_PHASE_1.md  PROMPTS_PHASE_2.md  (+3 more)
src/: App.css  App.module.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: automation.rs  commands.rs  config.rs  engine.rs  mod.rs  recorder.rs  synth_recorder.rs
src-tauri/src/commands/: audio_commands.rs  automation_commands.rs  drum_commands.rs  export_commands.rs  midi_commands.rs  mod.rs  project_commands.rs  recorder_commands.rs  sample_commands.rs  settings_commands.rs  synth_commands.rs
src-tauri/src/drums/: drum_rack.rs  mod.rs  pattern.rs  sequencer.rs
src-tauri/src/effects/: compressor.rs  delay.rs  effect_chain.rs  eq.rs  limiter.rs  mod.rs  reverb.rs
src-tauri/src/midi/: midi_engine.rs  mod.rs
src-tauri/src/mixer/: bus.rs  lufs_meter.rs  master.rs  metering.rs  mod.rs
src-tauri/src/project/: export.rs  file_io.rs  mod.rs  project.rs  templates.rs
src-tauri/src/sampler/: clip.rs  mod.rs  sample_bank.rs
src-tauri/src/synth/: envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs  synth_engine.rs  voice.rs
src-tauri/src/transport/: metronome.rs  mod.rs  transport.rs
(+190 files in other folders)
