[package]
name = "music-studio"
version = "0.1.0"
description = "Music Studio — DAW pédagogique et évolutive"
authors = []
license = ""
repository = ""
default-run = "music-studio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "music_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "music-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"

# MIDI
midir = "0.10"
